<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TesterAPP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Fucking_gays">Fucking gays!!!</string>
    <string name="kusawarota">kusowarota24</string>
    <string name="Fuck">Fuck</string>
    <string name="Do_You_Fucking_Face">Do You Fucking Face?</string>
    <string name="ositemiru">押してみる？</string>

</resources>
